--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "/src",
   "background_color": "#3367D6",
   "display": "standalone",
   "theme_color": "#3367D6"
