--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "http-server": "^0.11.1"
