--- a/package.json
+++ b/package.json
@@ -4,21 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/http-server/bin/http-server -p 9999"
+    "start": "webpack-dev-server --mode development --open",
+    "build-prod": "webpack --mode=production",
+    "build-dev": "webpack --mode=development"
   },
   "author": "",
   "license": "GNU 3",
   "dependencies": {
     "ajv": "^6.5.3",
-    "db_designer_core": "git+https://github.com/ayeressian/db_designer_core.git",
-    "menu-bar-component": "git+https://github.com/ayeressian/menu_bar_component.git",
-    "normalize.css": "^8.0.0"
+    "css-loader": "^1.0.0",
+    "db-viewer-component": "^1.0.4",
+    "menu-bar-component": "^1.0.10",
+    "normalize.css": "^8.0.0",
+    "style-loader": "^0.23.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "webpack": "^4.19.1",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.8"
   }
 }
