--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
+    "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
+    "html-loader": "^0.5.5",
     "http-server": "^0.11.1",
+    "img-loader": "^3.0.0",
+    "style-loader": "^0.23.0",
+    "to-string-loader": "^1.1.5",
+    "url-loader": "^1.1.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.8",
-    "css-loader": "^1.0.0",
-    "style-loader": "^0.23.0"
+    "webpack-dev-server": "^3.1.8"
   }
 }
