Added basic electron support

--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "db-designer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/electron.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build-prod": "webpack --mode=production",
     "build-dev": "webpack --mode=development",
+    "build-electron-dev": "webpack --config ./electron-webpack.config.js --mode=development --watch",
+    "build-electron-prod": "webpack --config ./electron-webpack.config.js --mode=production",
+    "start-electron": "electron el-dist/electron.js",
+    "estart": "concurrently \"npm:build-electron-dev\" \"npm:start-electron\"",
     "deploy": "npm run build-prod && git push origin `git subtree split --prefix dist master`:gh-pages --force"
   },
   "author": "",
@@ -19,10 +23,14 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
+    "concurrently": "^4.1.0",
+    "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
+    "electron": "^4.0.0-beta.11",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
     "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
     "img-loader": "^3.0.0",
     "style-loader": "^0.23.0",
