--- a/package.json
+++ b/package.json
@@ -26,12 +26,11 @@
     "concurrently": "^4.1.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
+    "ejs-loader": "^0.3.1",
     "electron": "^4.0.0-beta.11",
     "electron-webpack": "^2.6.1",
     "eslint": "^4.19.1",
     "eslint-config-google": "^0.9.1",
-    "handlebars": "^4.0.12",
-    "handlebars-loader": "^1.7.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
