moved webpack configs to separate folders

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "src/electron.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
-    "build-prod": "webpack --mode=production",
-    "build-dev": "webpack --mode=development",
+    "build-prod": "webpack --config=./webpack.config/webpack.config.js --mode=production",
+    "build-dev": "webpack --config=./webpack.config/webpack.config.js --mode=development",
     "deploy": "npm run build-prod && git push origin `git subtree split --prefix dist master`:gh-pages --force",
-    "build-electron-main-prod": "webpack --mode=production --config ./main.webpack.config.js ",
-    "build-electron-renderer-prod": "webpack --mode=production --config ./renderer.webpack.config.js",
-    "build-electron-main-dev": "webpack --watch --mode=development --config ./main.webpack.config.js ",
-    "build-electron-renderer-dev": "webpack --watch --mode=development --config ./renderer.webpack.config.js",
+    "build-electron-main-prod": "webpack --mode=production --config ./webpack.config/main.webpack.config.js ",
+    "build-electron-renderer-prod": "webpack --mode=production --config ./webpack.config/renderer.webpack.config.js",
+    "build-electron-main-dev": "webpack --watch --mode=development --config ./webpack.config/main.webpack.config.js ",
+    "build-electron-renderer-dev": "webpack --watch --mode=development --config ./webpack.config/renderer.webpack.config.js",
     "build-electron-dev": "concurrently \"npm:build-electron-main-dev\" \"npm:build-electron-renderer-dev\"",
     "build-electron-prod": "concurrently \"npm:build-electron-main-prod\" \"npm:build-electron-renderer-prod\"",
     "start-electron": "electron ./electron-dist/",
