fix webpack config

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/electron.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
+    "start": "webpack-dev-server --config=./webpack.config/webpack.config.js --mode development --open",
     "build-prod": "webpack --config=./webpack.config/webpack.config.js --mode=production",
     "build-dev": "webpack --config=./webpack.config/webpack.config.js --mode=development",
     "deploy": "npm run build-prod && git push origin `git subtree split --prefix dist master`:gh-pages --force",
