--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "GNU 3",
   "dependencies": {
     "ajv": "^6.5.3",
+    "datalist-polyfill": "^1.23.3",
     "db-viewer-component": "^3.4.2",
     "menu-bar-component": "^1.0.13",
     "normalize.css": "^8.0.0"
