--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "ajv": "^6.5.3",
     "db-viewer-component": "^3.4.2",
     "menu-bar-component": "^1.0.13",
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
+    "pg-query-emscripten": "^0.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
