added browser testing and fixed fromDbSchemaToView

--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,6 +1,8 @@
 {
   "globals": {
       "describe": "readonly",
-      "it": "readonly"
+      "it": "readonly",
+      "require": "readonly",
+      "module": "readonly"
   }
 }
