--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "start-electron": "electron ./electron-dist/",
     "package-darwin": "electron-packager ./electron-dist --platform=darwin --arch=x64 --out=./package",
     "package-linux": "electron-packager ./electron-dist --platform=linux --arch=x64 --out=./package",
-    "test": "mocha-webpack \"test/**/*.js\" --mode development --webpack-config=./webpack.config/webpack.config.js",
+    "test": "mocha-webpack \"test/**/*.js\" --mode development --webpack-config=./webpack.config/webpack.test.config.js",
     "test:watch": "npm run test -- --watch",
-    "test:debug": "webpack-dev-server --config webpack.config/webpack.test.config.js --hot --inline"
+    "test:debug": "webpack-dev-server --config webpack.config/webpack.test.debug.config.js --hot --inline"
   },
   "author": "",
   "license": "GNU 3",
