--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "db-viewer-component": "^3.4.2",
     "menu-bar-component": "^1.0.14",
     "normalize.css": "^8.0.0",
-    "pg-query-emscripten": "^0.1.0"
+    "pg-query-emscripten": "^0.1.0",
+    "sqlite-parser": "^1.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.6",
