--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "db-designer",
+  "name": "db-grapher",
   "version": "1.0.0",
   "description": "",
   "main": "src/electron.js",
@@ -7,7 +7,7 @@
     "start": "webpack-dev-server --config=./webpack.config/webpack.config.js --mode development --open",
     "build-prod": "webpack --config=./webpack.config/webpack.config.js --mode=production",
     "build-dev": "webpack --config=./webpack.config/webpack.config.js --mode=development",
-    "deploy": "npm run build-prod && git push origin `git subtree split --prefix dist master`:gh-pages --force",
+    "deploy": "rm -rf dist && npm run build-prod && ./deploy.sh",
     "build-electron-main-prod": "webpack --mode=production --config ./webpack.config/main.webpack.config.js ",
     "build-electron-renderer-prod": "webpack --mode=production --config ./webpack.config/renderer.webpack.config.js",
     "build-electron-main-dev": "webpack --watch --mode=development --config ./webpack.config/main.webpack.config.js ",
