added hotjar, added cname copy to dist

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/electron.js",
   "scripts": {
     "start": "webpack-dev-server --config=./webpack.config/webpack.config.js --mode development --open",
-    "build-prod": "webpack --config=./webpack.config/webpack.config.js --mode=production",
+    "build-prod": "webpack --config=./webpack.config/webpack.config.prod.js --mode=production",
     "build-dev": "webpack --config=./webpack.config/webpack.config.js --mode=development",
     "deploy": "rm -rf dist/* && npm run build-prod && ./deploy.sh",
     "build-electron-main-prod": "webpack --mode=production --config ./webpack.config/main.webpack.config.js ",
