--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "license": "GNU 3",
   "dependencies": {
     "ajv": "^6.5.3",
-    "db-viewer-component": "^3.4.2",
+    "db-viewer-component": "^3.6.1",
     "menu-bar-component": "^1.0.14",
     "normalize.css": "^8.0.0",
     "pg-query-emscripten": "^0.1.0",
@@ -37,7 +37,7 @@
     "concurrently": "^4.1.0",
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.0",
-    "ejs-loader": "^0.3.1",
+    "ejs-loader": "^0.3.5",
     "electron": "^4.0.0-beta.11",
     "electron-packager": "^13.1.0",
     "eslint": "^4.19.1",
@@ -45,14 +45,19 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "http-server": "^0.11.1",
+    "ignore-loader": "^0.1.2",
     "img-loader": "^3.0.0",
-    "mocha": "^6.0.2",
+    "mocha": "^6.2.2",
     "mocha-loader": "^2.0.1",
     "mocha-webpack": "^2.0.0-beta.0",
     "pg": "^7.7.1",
     "raw-loader": "^1.0.0",
     "style-loader": "^0.23.0",
     "to-string-loader": "^1.1.5",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.5.2",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.2",
     "url-loader": "^1.1.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
